
SET(BUILD_TESTING OFF CACHE BOOL "" FORCE)

ADD_SUBDIRECTORY(eigen)

SET(BUILD_SHARED_LIBS OFF CACHE BOOL "" FORCE)

ADD_SUBDIRECTORY(openexr/IlmBase)

TARGET_INCLUDE_DIRECTORIES(Half INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/openexr/IlmBase/Half)
TARGET_INCLUDE_DIRECTORIES(IlmThread INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/openexr/IlmBase/IlmThread)
TARGET_INCLUDE_DIRECTORIES(IlmThread INTERFACE ${CMAKE_CURRENT_BINARY_DIR}/openexr/IlmBase/config)
TARGET_INCLUDE_DIRECTORIES(Imath INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/openexr/IlmBase/Imath)
TARGET_INCLUDE_DIRECTORIES(Iex INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/openexr/IlmBase/Iex)
ADD_LIBRARY(Iex-2_2 ALIAS Iex)
ADD_LIBRARY(IlmThread-2_2 ALIAS IlmThread)
ADD_LIBRARY(Imath-2_2 ALIAS Imath)

ADD_SUBDIRECTORY(openexr/OpenEXR)

TARGET_INCLUDE_DIRECTORIES(dwaLookups PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/openexr/IlmBase/Imath)
TARGET_INCLUDE_DIRECTORIES(IlmImf INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/openexr/OpenEXR/IlmImf)
TARGET_INCLUDE_DIRECTORIES(IlmImf INTERFACE ${CMAKE_CURRENT_BINARY_DIR}/openexr/OpenEXR/config)

ADD_LIBRARY(OpenExr INTERFACE)
TARGET_LINK_LIBRARIES(OpenExr INTERFACE Half Iex Imath IlmImf IlmThread)

